# feature-creature

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.dev  LICENSE  Makefile  Procfile.local  README.md  build-clean.sh  build.sh  cabal.config  docker-compose.yml  feature-creature.cabal  server-local.sh  stack.yaml  test.sh
amqp-client/: fc-amqp-client.cabal
amqp-client/src/Network/AMQP/: Config.hs  MessageBus.hs
amqp-client/src/Network/AMQP/Internal/: Connection.hs  Consumer.hs  Producer.hs  Types.hs
amqp-client/test/: MessageBusSpec.hs
auth-service/: Dockerfile  Makefile  README.md  fc-auth-service.cabal  stack.yaml
auth-service/app/: Errors.hs  Main.hs  RouteTypes.hs  Routing.hs  StringQuoter.hs
auth-service/app/AccessCode/: Controller.hs  View.hs
auth-service/app/Home/: Controller.hs  View.hs
auth-service/app/Layouts/: Default.hs
auth-service/env/: development.env.gpg  test.env.gpg
auth-service/src/Config/: AppConfig.hs
auth-service/test/Helpers/: RequestSpecHelpers.hs
data/cli/: base-usage.txt  command-list.txt  domain-terms-command-usage.txt  product-command-usage.txt  user-roles-command-usage.txt
exe-feature-creature-api/: App.hs  AppConfig.hs  Documentation.hs  Main.hs  feature-creature-api.cabal
exe-feature-creature-api/Products/: DomainTermsAPI.hs  FeaturesAPI.hs  ProductsAPI.hs  UserRolesAPI.hs
exe-feature-creature-api/Users/: UsersAPI.hs
exe-features-api/: App.hs  AppConfig.hs  Documentation.hs  Main.hs  features-api.cabal  stack.yaml
exe-features-api/Features/: FeaturesAPI.hs
exe-repo-puller/: App.hs  Main.hs  repo-puller.cabal
exe-repo-refresher/: Main.hs
exe-search-service/: LICENSE  Main.hs  search-service.cabal
exe-web-executable/: Documentation.hs  MimeTypes.hs
exe-web-executable/Products/: DomainTermsAPI.hs  ProductsAPI.hs  UserRolesAPI.hs
feature-creature/: .gitignore  fc-feature-creature.cabal
feature-creature-shared/: fc-shared.cabal  stack.yaml
feature-creature-shared/src/: Messaging.hs
feature-creature-shared/src/Products/: Api.hs
feature-creature/app/: Errors.hs  Routing.hs
feature-creature/app/App/: Controller.hs  View.hs
feature-creature/app/Layouts/: Default.hs
feature-creature/app/Products/: Controller.hs  View.hs
feature-creature/backend/: Makefile  README.md  fc-feature-creature.cabal  stack.yaml
feature-creature/backend/app/: AccessTokens.hs  Errors.hs  Main.hs  Routing.hs
feature-creature/backend/env/: development.env.gpg  test.env.gpg
feature-creature/backend/public/: init.js
feature-creature/backend/scripts/: setup-database.sh
feature-creature/backend/src/: Cookies.hs  Messaging.hs  Models.hs  Repositories.hs  Retry.hs
feature-creature/backend/test/: CookiesSpec.hs
feature-creature/elm/: elm-package.json
feature-creature/elm/src/: Main.elm
feature-creature/public/: elm.js  init.js
feature-creature/src/Config/: AppConfig.hs
features-worker/: .gitignore  fc-features-worker.cabal  stack.yaml
features-worker/app/: App.hs  Main.hs
features-worker/env/: development.env  development.env.gpg
features-worker/src/Config/: AppConfig.hs  RabbitMQ.hs
keyrings/live/: blackbox-admins.txt  blackbox-files.txt  pubring.gpg  trustdb.gpg
legacy/: .dockerignore  README.md
legacy/exe-feature-creature-api/: Documentation.hs
legacy/exe-feature-creature-api/Products/: DomainTermsAPI.hs
legacy/exe-features-api/Features/: FeaturesAPI.hs
legacy/exe-repo-puller/: AppConfig.hs
legacy/exe-repo-refresher/: App.hs  repo-refresher.cabal
legacy/exe-search-service/: stack.yaml
legacy/lib/: Retry.hs  feature-creature.cabal
legacy/lib/Api/: MimeTypes.hs
legacy/lib/Data/: DirectoryTree.hs
lib/: CommonCreatures.hs  Config.hs  Database.hs  Git.hs  Indexer.hs  ModelTypes.hs  Models.hs  Retry.hs  SQS.hs  feature-creature.cabal  stack.yaml
lib/Api/: Types.hs
lib/Async/: Job.hs
lib/Config/: Config.hs
lib/Data/: DirectoryTree.hs
lib/Database/: Types.hs
lib/DomainTerms/: DomainTerm.hs
lib/Features/: Feature.hs  SearchableFeature.hs
lib/Git/: Diff.hs  Git.hs
lib/Messaging/: Exchanges.hs  Job.hs  Products.hs
lib/Products/: CodeRepository.hs  Messaging.hs  Model.hs  Product.hs  ProductRepo.hs
lib/UserRoles/: UserRole.hs
marketing-site/: Dockerfile  fc-marketing-site.cabal  stack.yaml
marketing-site/app/: App.hs  Main.hs  Routing.hs
marketing-site/app/Home/: Controller.hs  View.hs
marketing-site/app/Layouts/: Default.hs
marketing-site/app/Private/: Controller.hs  View.hs
marketing-site/env/: development.env.gpg  test.env.gpg
marketing-site/src/Config/: AppConfig.hs
marketing-site/test/Helpers/: TestWebServer.hs
marketing-site/test/Home/: ApiSpec.hs  RequestSpec.hs
product-executable/: Config.hs  Main.hs
product-executable/CLI/: Base.hs  DataFiles.hs  DomainTermsForm.hs  FeaturesForm.hs  ProductForm.hs  UserRolesForm.hs
repo-refresher/: AppConfig.hs  Main.hs
script/development/: setupdb.sh
scripts/: encrypt_env_files.sh
scripts/development/: bootstrap-env.sh  feature-creature-env.sh  search-service-env.sh  start-all-servers.sh
scripts/production/: feature-creature-env.sh
search-service/: App.hs  AppConfig.hs  Config.hs  Features.hs  Indexer.hs  Main.hs
src/: Main.hs
test/: Spec.hs
test/Features/: SearchableFeatureSpec.hs
test/Git/: DiffSpec.hs
users-service/: Dockerfile  Makefile  Procfile  README.md  fc-users-service.cabal  stack.yaml
users-service-client/: fc-users-service-client.cabal
users-service-client/src/Users/: Api.hs
users-service/app/: Main.hs  Routing.hs
users-service/env/: development.env.gpg  test.env.gpg
users-service/scripts/: setup-database.sh
users-service/src/: Models.hs  Users.hs
web-executable/: API.hs  AppConfig.hs  Documentation.hs  Main.hs  ProductsAPI.hs  ServantUtilities.hs
web-executable/Config/: AWS.hs  Database.hs  Environment.hs  Git.hs  Search.hs
web-executable/Products/: DomainTermsAPI.hs  FeaturesAPI.hs  ProductsAPI.hs  UserRolesAPI.hs
web-executable/products/: DomainTermsAPI.hs  FeaturesAPI.hs  ProductsAPI.hs  UserRolesAPI.hs
(+71 files in other folders)
