name:                fc-amqp-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/amqp-client#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    Network.AMQP.MessageBus
    Network.AMQP.Config

  other-modules:
    Network.AMQP.Internal.Connection
    Network.AMQP.Internal.Consumer
    Network.AMQP.Internal.Producer
    Network.AMQP.Internal.Types

  build-depends: aeson       >= 0.11.2.0 && < 0.11.3.0
               , amqp        >= 0.13.0 && < 0.14.0
               , base        >= 4.7 && < 5
               , containers  >= 0.5.6.2 && < 0.5.7.0
               , mtl         >= 2.2.1 && < 2.3.0
               , text        >= 1.2.2.1 && < 1.2.3.0

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

test-suite fc-amqp-client-test
  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    src
    , test

  main-is:
    Spec.hs

  other-modules:
    Network.AMQP.Config
    Network.AMQP.MessageBus
    Network.AMQP.Internal.Connection
    Network.AMQP.Internal.Consumer
    Network.AMQP.Internal.Producer
    Network.AMQP.Internal.Types
    MessageBusSpec

  build-depends: base
               , aeson          >= 0.11.2.0 && < 0.11.3.0
               , amqp           >= 0.13.0 && < 0.14.0
               , containers     >= 0.5.6.2 && < 0.5.7.0
               , fc-amqp-client
               , hspec          >= 2.2.3 && < 2.3.0
               , mtl            >= 2.2.1 && < 2.3.0
               , text           >= 1.2.2.1 && < 1.2.3.0

  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TypeOperators

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/amqp-client
