name:                fc-shared
version:             0.1.0.0
synopsis:            tasty-discover based template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/feature-creature-shared#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    Messaging
    Products.Api
    Repositories

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  build-depends: base >= 4.7 && < 5
               , aeson >= 0.11.2.0 && < 0.11.3.0
               , fc-amqp-client >= 0.1.0.0 && < 0.1.1.0
               , github >= 0.15.0 && < 0.16.0
               , text >= 1.2.2.1 && < 1.2.3.0

test-suite feature-creature-shared-test
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test

  main-is:             Tasty.hs

  other-modules:       FooTest

  build-depends:       base
                     , tasty-discover

  default-language:    Haskell2010
