name:                fc-features-worker
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/toddmohney/features-worker#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Config.AppConfig
    Config.Environment
    Config.RabbitMQ

  build-depends: base >= 4.7 && < 5
               , directory >= 1.2.2.0 && < 1.2.3.0
               , filepath >= 1.4.0.0 && < 1.4.1.0
               , load-env >= 0.1.1 && < 0.2.0
               , text >= 1.2.2.1 && < 1.2.3.0

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  default-language: Haskell2010

executable fc-features-worker
  hs-source-dirs: app

  main-is:
    Main.hs

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: base
               , fc-features-worker
               , text >= 1.2.2.1 && < 1.2.3.0

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  default-language:
    Haskell2010

test-suite features-worker-test
  type: exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Spec.hs

  build-depends: base
               , features-worker
               , hspec
               , QuickCheck

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -fno-warn-orphans
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TypeOperators

  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/features-worker
