name:                fc-marketing-site
version:             0.1.0.0
synopsis:            Exmaple Servant application
description:         Please see README.md
homepage:            https://github.com/gust/feature-creature
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:
    src

  exposed-modules:
    Config.AppConfig
    Config.Environment
    Cookies

  other-modules:

  build-depends: base                  >= 4.7 && < 5
               , aeson                 >= 0.11.2.0 && < 0.11.3.0
               , bytestring            >= 0.10.6.0 && < 0.10.7.0
               , containers            >= 0.5.6.2 && < 0.5.7.0
               , data-default          >= 0.5.3 && < 0.6.0
               , directory             >= 1.2.2.0 && < 1.2.3.0
               , exceptions            >= 0.8.2.1 && < 0.8.3.0
               , fast-logger           >= 2.4.6 && < 2.5.0
               , fc-users-service-client  >= 0.1.0.0 && < 0.1.1.0
               , filepath              >= 1.4.0.0 && < 1.4.1.0
               , lens                  >= 4.13 && < 5.0
               , load-env              >= 0.1.1 && < 0.2.0
               , logentries            >= 0.1.0.0 && < 0.1.1.0
               , monad-logger          >= 0.3.18 && < 0.4.0
               , mtl                   >= 2.2.1 && < 2.3.0
               , network               >= 2.6.2.1 && < 2.6.3.0
               , stm                   >= 2.4.4.1 && < 2.4.5.0
               , text                  >= 1.2.2.1 && < 1.2.3.0
               , time                  >= 1.5.0.1 && < 1.5.1.0
               , transformers          >= 0.4.2.0 && < 0.4.3.0
               , url                   >= 2.1.3 && < 2.2.0
               , uuid-types            >= 1.0.3 && < 1.1.0
               , wai                   >= 3.2.1.1 && < 3.2.2.0
               , wai-extra             >= 3.0.15.1 && < 3.0.16.0

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language:
    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

executable fc-marketing-site
  hs-source-dirs:
    app

  main-is:
    Main.hs

  other-modules:
    App
    Errors
    Routing
    Home.Controller
    Home.View
    Private.Controller
    Private.View
    Layouts.Default

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -fno-warn-orphans
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: base
               , aeson                 >= 0.11.2.0 && < 0.11.3.0
               , blaze-html            >= 0.8.1.1 &&  < 0.8.2.0
               , containers            >= 0.5.6.2 && < 0.5.7.0
               , fc-marketing-site
               , bytestring            >= 0.10.6.0 && < 0.10.7.0
               , exceptions            >= 0.8.2.1 && < 0.8.3.0
               , jwt                   >= 0.1.0.0 && < 0.1.1.0
               , lens                  >= 4.13 && < 5.0
               , logentries            >= 0.1.0.0 && < 0.1.1.0
               , mtl                   >= 2.2.1 && < 2.3.0
               , monad-logger          >= 0.3.18 && < 0.4.0
               , servant-blaze         >= 0.7.1 && < 0.8.0
               , servant-server        >= 0.7.1 && < 0.8.0
               , text                  >= 1.2.2.1 && < 1.2.3.0
               , time                  >= 1.5.0.1 && < 1.5.1.0
               , transformers          >= 0.4.2.0 && < 0.4.3.0
               , fc-users-service-client  >= 0.1.0.0 && < 0.1.1.0
               , wai                   >= 3.2.1.1 && < 3.2.2.0
               , warp
               , wai-cors
               , wai-extra             >= 3.0.15.1 && < 3.0.16.0

  default-language:
    Haskell2010

  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TypeOperators

test-suite fc-marketing-site-test
  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    app
    src
    test

  main-is:
    Spec.hs

  build-depends: base
               , aeson                 >= 0.11.2.0 && < 0.11.3.0
               , aeson-pretty          >= 0.7.2 && < 0.8.0
               , blaze-html            >= 0.8.1.1 &&  < 0.8.2.0
               , bytestring            >= 0.10.6.0 && < 0.10.7.0
               , containers            >= 0.5.6.2 && < 0.5.7.0
               , directory             >= 1.2.2.0 && < 1.2.3.0
               , fc-marketing-site
               , fc-users-service-client  >= 0.1.0.0 && < 0.1.1.0
               , filepath              >= 1.4.0.0 && < 1.4.1.0
               , hspec                 >= 2.2.3 && < 2.3.0
               , hspec-wai             >= 0.6 && < 1
               , hspec-wai-json        >= 0.6.1 && < 1
               , http-types            >= 0.9 && < 1
               , jwt                   >= 0.1.0.0 && < 0.1.1.0
               , logentries            >= 0.1.0.0 && < 0.1.1.0
               , mtl                   >= 2.2.1 && < 2.3.0
               , lens                  >= 4.13 && < 5.0
               , load-env              >= 0.1.1 && < 0.2.0
               , servant-blaze         >= 0.7.1 && < 0.8.0
               , servant-server        >= 0.7.1 && < 0.8.0
               , time                  >= 1.5.0.1 && < 1.5.1.0
               , transformers          >= 0.4.2.0 && < 0.4.3.0
               , text                  >= 1.2.2.1 && < 1.2.3.0
               , url                   >= 2.1.3 && < 2.2.0
               , wai                   >= 3.2.1.1 && < 3.2.2.0
               , wai-extra             >= 3.0.15.1 && < 3.0.16.0

  other-modules:
    App
    Config.AppConfig
    Config.Environment
    Cookies
    CookiesSpec
    Errors
    Helpers.RequestSpecHelpers
    Helpers.TestWebServer
    Routing
    Home.Controller
    Home.RequestSpec
    Home.View
    Layouts.Default
    Private.Controller
    Private.View

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -fno-warn-orphans
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    DataKinds
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TypeOperators

  default-language:
    Haskell2010

source-repository head
  type:
    git

  location:
    https://github.com/gust/feature-creature
