name:                fc-users-service-client
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/users-service-client#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Todd Mohney
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    Users.Api

  build-depends: aeson       >= 0.11.2.0 && < 0.11.3.0
               , base        >= 4.7 && < 5
               , http-client >= 0.4.29 && < 0.5.0
               , lens        >= 4.13 && < 5.0
               , mtl         >= 2.2.1 && < 2.3.0
               , swagger2    >= 2.0.2 && < 2.1.0
               , text        >= 1.2.2.1 && < 1.2.3.0
               , wreq        >= 0.4.1.0 && < 0.4.2.0

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

test-suite fc-users-service-client-test
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test

  main-is:             Spec.hs

  build-depends:       base
                     , fc-users-service-client

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/users-service-client
